testing/errors/obsolete3.a
	*=$1000
	!realpc	; -> ""!pseudopc/!realpc" is obsolete; use "!pseudopc {}" instead."
